noinst_LTLIBRARIES = \
	libudis86.la

gumincludedir = $(includedir)/gum-1.0/libudis86
guminclude_HEADERS = \
	types.h \
	itab.h \
	extern.h \
	decode.h \
	input.h \
	syn.h

libudis86_la_SOURCES = \
	decode.c \
	decode.h \
	extern.h \
	input.c \
	input.h \
	itab.c \
	itab.h \
	syn-att.c \
	syn-intel.c \
	syn.c \
	syn.h \
	types.h \
	udis86.c
